--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -5,5 +5,6 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "CommandsService": "http://localhost:6000"
 }
